--- a/TicketSales/package.json
+++ b/TicketSales/package.json
@@ -11,17 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "^18.0.7",
-    "@angular/animations": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/router": "^18.0.0",
+    "@angular/animations": "^18.1.1",
+    "@angular/common": "^18.1.1",
+    "@angular/compiler": "^18.1.1",
+    "@angular/core": "^18.1.1",
+    "@angular/forms": "^18.1.1",
+    "@angular/platform-browser": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/router": "^18.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
+    "@popperjs/core": "^2.11.8",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.3.8",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "tslib": "^2.3.0",
@@ -29,7 +32,8 @@
   },
   "devDependencies": {
     "@angular/cli": "^18.1.1",
-    "@angular/compiler-cli": "^18.0.0",
+    "@angular/compiler-cli": "^18.1.1",
+    "@angular/localize": "^18.1.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
