Fixing the Bundle Size Issue

--- a/TicketSales/angular.json
+++ b/TicketSales/angular.json
@@ -23,6 +23,13 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": [
+              "amazon-cognito-identity-js",
+              "buffer",
+              "@aws-crypto/sha256-js",
+              "js-cookie",
+              "isomorphic-unfetch"
+            ],
             "outputPath": "dist/ticket-sales",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -58,8 +65,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -101,6 +108,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            
             "polyfills": [
               "zone.js",
               "zone.js/testing",
