adding payment feature

--- a/TicketSales/package.json
+++ b/TicketSales/package.json
@@ -22,12 +22,16 @@
     "@angular/router": "^18.1.1",
     "@ng-bootstrap/ng-bootstrap": "^17.0.0",
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^4.1.0",
     "amazon-cognito-identity-js": "^6.3.12",
-    "aws-amplify": "^6.3.8",
+    "aws-amplify": "^5.3.19",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "glob": "^11.0.0",
+    "inflight": "^1.0.6",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
+    "rimraf": "^6.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
