task-02 :Test pre-push hook

--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "scripts": {
     "prepare": "husky install",
     "precommit": "node scripts/check-todo.js",
-    "test": "jest"
+    "test": "jest --coverage"
   }
 }
